# assignment_v0.2

./: .gitignore  ISSUES.md  benchmark_results.json  requirements.txt
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/scripts/: benchmark.py  compare_pipelines.py  entrypoint.sh  gaming_csv_to_db.py
backend/src/: __init__.py  main.py
backend/src/constants/: http_constants.py  input_constants.py  llm_constants.py  pipeline_constants.py  schema_constants.py  stream_constants.py
backend/src/controllers/: chat_controller.py  history_controller.py  runs_controller.py
backend/src/database/: runs_repository.py  schema_introspection.py
backend/src/helpers/: chat_helpers.py
backend/src/lib/: observability.py  sse.py
backend/src/models/: event_models.py  pipeline_models.py  schema_models.py
backend/src/routes/: chat_routes.py  config_routes.py  history_routes.py  runs_routes.py
backend/src/schemas/: chat_schemas.py  history_schemas.py  runs_schemas.py
backend/src/services/: chat_rewriter_service.py  llm_service.py  pipeline_service.py  sql_executor_service.py
backend/src/services/baseline/: llm_baseline_service.py  pipeline_baseline_service.py
backend/src/validators/: input_validator.py  sql_validator.py
backend/tests/: test_pipeline_unit.py  test_public.py  test_schema.py  test_validator.py
docs/: CHECKLIST.md  ISSUES.md  README.md  SETUP.md  SOLUTION_NOTES.md
frontend/: .gitignore  next.config.ts  package.json  pnpm-lock.yaml
scripts/: compare_pipelines.py
server/: limits.py  main.py  storage.py  stream.py
(+91 files in other folders)
