[project]
name = "assignment-backend"
version = "0.1.0"
description = "Optimized LLM-driven analytics pipeline (FastAPI + SSE) for the assignment."
requires-python = ">=3.13"
dependencies = [
    "openrouter",
    "pandas",
    "python-dotenv",
    "sqlglot>=26",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[tool.uv]
package = false
